objects/Reservation_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Reservation__c</externalName>
    <fields>
        <fullName>Accessories_IDs_c__c</fullName>
        <externalDeveloperName>Accessories_IDs__c</externalDeveloperName>
        <inlineHelpText>All the IDs of the accessories (comma separated)</inlineHelpText>
        <label>Accessories IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessories_Names_c__c</fullName>
        <externalDeveloperName>Accessories_Names__c</externalDeveloperName>
        <inlineHelpText>Names of the Accessories</inlineHelpText>
        <label>Accessories Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accessories_c__c</fullName>
        <externalDeveloperName>Accessories__c</externalDeveloperName>
        <inlineHelpText>Accessories stored as a JSON string</inlineHelpText>
        <label>Accessories</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Code_c__c</fullName>
        <externalDeveloperName>Approval_Code__c</externalDeveloperName>
        <label>Deposit Confirmation Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Status_c__c</fullName>
        <externalDeveloperName>BT_Status__c</externalDeveloperName>
        <label>BT Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_Transaction_Id_c__c</fullName>
        <externalDeveloperName>BT_Transaction_Id__c</externalDeveloperName>
        <label>BT Transaction Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Image_URL_c__c</fullName>
        <externalDeveloperName>Base_Image_URL__c</externalDeveloperName>
        <label>Base Image URL</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Entity_c__c</fullName>
        <externalDeveloperName>Business_Entity__c</externalDeveloperName>
        <label>Business Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name_c__c</fullName>
        <externalDeveloperName>Campaign_Name__c</externalDeveloperName>
        <label>Campaign Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_c__c</fullName>
        <externalDeveloperName>Cart__c</externalDeveloperName>
        <label>Cart</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Completed__c</externalDeveloperName>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_c__c</fullName>
        <externalDeveloperName>Dealer_Address__c</externalDeveloperName>
        <label>Dealer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_City_c__c</fullName>
        <externalDeveloperName>Dealer_City__c</externalDeveloperName>
        <label>Dealer City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name_c__c</fullName>
        <externalDeveloperName>Dealer_Name__c</externalDeveloperName>
        <label>Dealer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Number_c__c</fullName>
        <externalDeveloperName>Dealer_Number__c</externalDeveloperName>
        <label>Dealer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone_c__c</fullName>
        <externalDeveloperName>Dealer_Phone__c</externalDeveloperName>
        <label>Dealer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Postal_Code_c__c</fullName>
        <externalDeveloperName>Dealer_Postal_Code__c</externalDeveloperName>
        <label>Dealer Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_State_c__c</fullName>
        <externalDeveloperName>Dealer_State__c</externalDeveloperName>
        <label>Dealer State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Send_Date_c__c</fullName>
        <externalDeveloperName>Delivery_Send_Date__c</externalDeveloperName>
        <label>Delivery Send Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_c__c</fullName>
        <externalDeveloperName>Deposit_Amount__c</externalDeveloperName>
        <label>Deposit Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Number_c__c</fullName>
        <externalDeveloperName>Display_Number__c</externalDeveloperName>
        <label>Display Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailSent_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EmailSent__c</externalDeveloperName>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exterior_Color_Code_c__c</fullName>
        <externalDeveloperName>Exterior_Color_Code__c</externalDeveloperName>
        <label>Exterior Color Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Color_Price_c__c</fullName>
        <externalDeveloperName>Exterior_Color_Price__c</externalDeveloperName>
        <label>Exterior Color Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exterior_Color_c__c</fullName>
        <externalDeveloperName>Exterior_Color__c</externalDeveloperName>
        <label>Exterior Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL_c__c</fullName>
        <externalDeveloperName>Image_URL__c</externalDeveloperName>
        <label>Image URL</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interior_Color_Code_c__c</fullName>
        <externalDeveloperName>Interior_Color_Code__c</externalDeveloperName>
        <label>Interior Color Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Color_c__c</fullName>
        <externalDeveloperName>Interior_Color__c</externalDeveloperName>
        <label>Interior Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWaitlist_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsWaitlist__c</externalDeveloperName>
        <label>IsWaitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Participating_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Participating__c</externalDeveloperName>
        <label>Is Participating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pre_Reserve_Flow_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Pre_Reserve_Flow__c</externalDeveloperName>
        <label>Is Pre Reserve Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>LeadPosted__c</externalDeveloperName>
        <label>Lead Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSRP_c__c</fullName>
        <externalDeveloperName>MSRP__c</externalDeveloperName>
        <label>MSRP</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_ID_c__c</fullName>
        <externalDeveloperName>Model_ID__c</externalDeveloperName>
        <label>Model ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name_c__c</fullName>
        <externalDeveloperName>Model_Name__c</externalDeveloperName>
        <label>Model Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year_c__c</fullName>
        <externalDeveloperName>Model_Year__c</externalDeveloperName>
        <label>Model Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Reservation Name</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_c__c</fullName>
        <externalDeveloperName>Order__c</externalDeveloperName>
        <label>Order</label>
        <length>18</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Reservations</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name_c__c</fullName>
        <externalDeveloperName>Package_Name__c</externalDeveloperName>
        <label>Package Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_HELMS_tries_c__c</fullName>
        <externalDeveloperName>Post_to_HELMS_tries__c</externalDeveloperName>
        <label>Post to HELMS tries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posted_to_HELMS_Datetime_c__c</fullName>
        <externalDeveloperName>Posted_to_HELMS_Datetime__c</externalDeveloperName>
        <label>Posted to HELMS Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_c__c</fullName>
        <externalDeveloperName>Product__c</externalDeveloperName>
        <label>Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Non_Participating_Dealer_c__c</fullName>
        <externalDeveloperName>Provider_Non_Participating_Dealer__c</externalDeveloperName>
        <label>Provider Non Participating Dealer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Participating_Dealer_c__c</fullName>
        <externalDeveloperName>Provider_Participating_Dealer__c</externalDeveloperName>
        <label>Provider Participating Dealer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Reserve_Waitlist_c__c</fullName>
        <externalDeveloperName>Provider_Reserve_Waitlist__c</externalDeveloperName>
        <label>Provider Reserve Waitlist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL_c__c</fullName>
        <externalDeveloperName>Redirect_URL__c</externalDeveloperName>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refunded_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Refunded__c</externalDeveloperName>
        <label>Refunded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reservation_Cap_Group_c__c</fullName>
        <externalDeveloperName>Reservation_Cap_Group__c</externalDeveloperName>
        <label>Reservation Cap Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_Contact2_c__c</fullName>
        <externalDeveloperName>Reservation_Contact2__c</externalDeveloperName>
        <label>Reservation Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_Payment_c__c</fullName>
        <externalDeveloperName>Reservation_Payment__c</externalDeveloperName>
        <label>Reservation Payment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retry_Count_c__c</fullName>
        <externalDeveloperName>Retry_Count__c</externalDeveloperName>
        <label>Retry Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Cancel_API_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Sent_to_Cancel_API__c</externalDeveloperName>
        <label>Sent to Cancel API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Email_API_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Sent_to_Email_API__c</externalDeveloperName>
        <label>Sent to Email API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shopping_Tool_c__c</fullName>
        <externalDeveloperName>Shopping_Tool__c</externalDeveloperName>
        <label>Shopping Tool</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sitecore_id_c__c</fullName>
        <externalDeveloperName>Sitecore_id__c</externalDeveloperName>
        <inlineHelpText>This is the id generated for Sitecore.</inlineHelpText>
        <label>Sitecore id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_c__c</fullName>
        <externalDeveloperName>Status__c</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Deposit Made</fullName>
                </value>
                <value>
                    <fullName>Reservation Made</fullName>
                </value>
                <value>
                    <fullName>Wait-listed</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>leadPostFailure</fullName>
                    <label>Lead Failed to Post</label>
                </value>
                <value>
                    <fullName>Deposit Failed</fullName>
                </value>
                <value>
                    <fullName>PreReserve</fullName>
                </value>
                <value>
                    <fullName>PossibleDuplicate</fullName>
                </value>
                <value>
                    <fullName>PaymentFlow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_c__c</fullName>
        <externalDeveloperName>Transaction_Type__c</externalDeveloperName>
        <label>Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_IP_Address_c__c</fullName>
        <externalDeveloperName>User_IP_Address__c</externalDeveloperName>
        <label>User IP Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Body_Style_c__c</fullName>
        <externalDeveloperName>Vehicle_Model_Body_Style__c</externalDeveloperName>
        <label>Vehicle Model Body Style</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Marketing_Name_c__c</fullName>
        <externalDeveloperName>Vehicle_Model_Marketing_Name__c</externalDeveloperName>
        <label>Vehicle Model Marketing Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Series_c__c</fullName>
        <externalDeveloperName>Vehicle_Model_Series__c</externalDeveloperName>
        <label>Vehicle Model Series</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueModelId_c__c</fullName>
        <externalDeveloperName>uniqueModelId__c</externalDeveloperName>
        <inlineHelpText>Holds a unique model ID that was passed in.</inlineHelpText>
        <label>uniqueModelId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Reservation</label>
    <pluralLabel>Reservations</pluralLabel>
</CustomObject>